--- a/Tracer/public/multiQuery.html
+++ b/Tracer/public/multiQuery.html
@@ -256,11 +256,13 @@
             forDate = false;
 
         $('#queryFromBlock').click(function(e) {
-            if (action != 2) {
-                action = 1;
-                $('#block_dialog').dialog('open');
-                e.preventDefault();
-            }
+            // if (action != 2) {
+            //     action = 1;
+            //     $('#block_dialog').dialog('open');
+            //     e.preventDefault();
+            // }
+            $('#block_dialog').dialog('open');
+            e.preventDefault();
         })
 
         $('#block_dialog').dialog({
@@ -317,11 +319,13 @@
         var pickerFrom = datepicker('#fromDate');
         var pickerTo = datepicker('#toDate');
         $('#queryStartTime').click(function() {
-            if (action != 2) {
-                action = 1;
-                $('#date_dialog').dialog('open');
-                e.preventDefault();
-            }
+            // if (action != 2) {
+            //     action = 1;
+            //     $('#date_dialog').dialog('open');
+            //     e.preventDefault();
+            // }
+            $('#date_dialog').dialog('open');
+            e.preventDefault();
         })
 
         $('#date_dialog').dialog({
@@ -387,11 +391,13 @@
         }
 
         $('#queryAge').click(function() {
-            if (action != 1) {
-                action = 2;
-                $('#age_dialog').dialog('open');
-                e.preventDefault();
-            }
+            // if (action != 1) {
+            //     action = 2;
+            //     $('#age_dialog').dialog('open');
+            //     e.preventDefault();
+            // }
+            $('#age_dialog').dialog('open');
+            e.preventDefault();
         })
 
         $('#age_dialog').dialog({
@@ -403,11 +409,29 @@
             buttons: [{
                 text: 'filter',
                 click: function() {
-                    // var t = new Date().getTime();
-                    // alert(timeStamp2String(t/1000));
-                    // alert(timeStamp2String(t/1000 - 180));
                     clearFlag();
-                    filterAgeButton();
+                    // filterAgeButton();
+                    var time = new Date().getTime()
+                    // alert(timeStamp2String(time / 1000 - slider.value * 60));
+                    // alert(timeStamp2String(time / 1000));
+                    $('#fromDate').val(timeStamp2String(time / 1000 - slider.value * 60));
+                    $('#toDate').val(timeStamp2String(time / 1000));
+
+                    if ($('#fromDate').val() == "" || $('#toDate').val() == "") {
+                        alert('Error! 請確認輸入之查詢條件');
+                    } else {
+                        $('#fromBlock').val('0');
+                        $('#toBlock').val('');
+
+                        if (forBlock) {
+                            $('#from').val('');
+                            $('#to').val('');
+                        }
+                        clearFlag();
+                        filterButton();
+                        $(this).dialog("close");
+                    }
+
                     $(this).dialog("close");
                 }
             }, {
@@ -524,6 +548,7 @@
                 click: function() {
                     clearFlag();
 
+                    flagToken = true;
                     regTokens = [];
                     $(':checkbox:checked').each(function(i) {
                         regTokens[i] = $(this).val();
@@ -571,8 +596,8 @@
         function filterButton() {
             if ($('#toDate').val() != "" && $('#toBlok').val() != null) {
                 alert('You can only do one range query of block / date. Please check the query input again!');
-            } else if (!flagToken && !forDate && !forBlock && !flagAccount0 && !flagAccount1 && !flagAccount2) {
-                // } else if (flagToken) {
+            // } else if (!flagToken && !forDate && !forBlock && !flagAccount0 && !flagAccount1 && !flagAccount2) {
+            } else if (flagToken) {
                 resetQueryAction();
 
                 flagToken = true;
@@ -644,8 +669,8 @@
             resetQueryAction();
 
             var time = new Date().getTime()
-            alert(timeStamp2String(time / 1000 - slider.value * 60));
-            alert(timeStamp2String(time / 1000));
+            // alert(timeStamp2String(time / 1000 - slider.value * 60));
+            // alert(timeStamp2String(time / 1000));
             $('#fromDate').val(timeStamp2String(time / 1000 - slider.value * 60));
             $('#toDate').val(timeStamp2String(time / 1000));
 
